--- a/docker-stack.yaml
+++ b/docker-stack.yaml
@@ -6,8 +6,8 @@ services:
       - PORT=8124
       - VIRTUAL_HOST=tcp.studio-vely.com
       - VIRTUAL_PORT=8124
-      - LETSENCRYPT_HOST=tcp.studio-vely.com
-      - LETSENCRYPT_EMAIL=fpatafta@live.com
+      # - LETSENCRYPT_HOST=tcp.studio-vely.com
+      # - LETSENCRYPT_EMAIL=fpatafta@live.com
     networks:
       - "nginx-proxy_default"
     expose:
